feat(images): added images controller and logic
